# flow-fixer

./: .gitignore  CHANGELOG.md  LICENSE  PRIVACY.md  README.md  SECURITY.md  pyproject.toml
docs/: ENG_BRIEF.md  INTERNAL_MAP.md  LIMITATIONS.md  OPS_DOCTRINE.md
examples/: sample_report.md
extension/: README.md  background.js  inject.js  manifest.json  popup.css  popup.html  popup.js
extension/lib/: classify.js  match.js  speeds.js
fixtures/: synthetic_burst.har
flowfixer/: __init__.py  __main__.py  analyze.py  cli.py  sanitize.py
scripts/: package_extension.ps1
tests/: test_analyze.py
